tests/ui/consts/const_transmute_type_id6.stderr
error[E0080]: invalid `TypeId` value: not all bytes carry type id metadata
  --> $DIR/const_transmute_type_id6.rs:12:5
   |
LL |     id == id
   |     ^^^^^^^^ evaluation of `X` failed inside this call
   |
note: inside `<TypeId as PartialEq>::eq`
  --> $SRC_DIR/core/src/any.rs:LL:COL
note: inside `<TypeId as PartialEq>::eq::compiletime`
  --> $SRC_DIR/core/src/any.rs:LL:COL
   = note: this error originates in the macro `$crate::intrinsics::const_eval_select` which comes from the expansion of the macro `crate::intrinsics::const_eval_select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
